# Technical-Verification

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/color_calculate/: RGB_gradient.cc  RGB_gradient.h
